:sparkles: feat: Fiz a lógica para carregar dados, buscar dados e exibir os alarmes, também criei um id único para cada alarme, para poder concluir a lógica do checkbox e do delete de alarmes.

--- a/src/view/html/alarmTela3.html
+++ b/src/view/html/alarmTela3.html
@@ -26,51 +26,7 @@
                 </div>
             </div>
         </div>
-        <div class="container custom-container px-0">
-            <div class="card1 mb-3">
-                <div class="row">
-                    <div class="col-2">
-                        <input type="checkbox" id="customCheckbox" class="custom-checkbox checkbox-margin">
-                    </div>
-                    <div class="col">
-                        <p class="horario-timer d-flex justify-content-start mb-0">12:30 pm</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <p class="p2-margin d-flex justify-content-start ms-1">Lunch with the new costumers</p>
-                </div>
-            </div>
-        </div>
-        <div class="container custom-container px-0">
-            <div class="card1 mb-3">
-                <div class="row">
-                    <div class="col-2">
-                        <input type="checkbox" id="customCheckbox" class="custom-checkbox checkbox-margin">
-                    </div>
-                    <div class="col">
-                        <p class="horario-timer d-flex justify-content-start mb-0">2:00 pm</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <p class="p2-margin d-flex justify-content-start ms-1">Meeting in the office</p>
-                </div>
-            </div>
-        </div>
-        <div class="container custom-container px-0">
-            <div class="card1 mb-3">
-                <div class="row">
-                    <div class="col-2">
-                        <input type="checkbox" id="customCheckbox" class="custom-checkbox checkbox-margin">
-                    </div>
-                    <div class="col">
-                        <p class="horario-timer d-flex justify-content-start mb-0">5:00 pm</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <p class="p2-margin d-flex justify-content-start ms-1">Happy hour</p>
-                </div>
-            </div>
-        </div>
+        <div class="container custom-container px-0" id="idElementoPai"></div>
         <div>
             <a href="/">
                 <img src="../assts/time_icon_sm.png" alt="Config" width="100px" height="100px" class="relogio">
